[gd_scene load_steps=5 format=3 uid="uid://03j3kuuki03c"]

[ext_resource type="Script" uid="uid://danmcci2b5p3j" path="res://Objects/Door/DoorScript.gd" id="1_g35bp"]
[ext_resource type="SpriteFrames" uid="uid://dljhgb4mss5ih" path="res://Objects/Door/DoorAnim.tres" id="1_ni8px"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ihvk"]
size = Vector2(257, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_65nwm"]
size = Vector2(24, 512)

[node name="door" type="StaticBody2D"]
script = ExtResource("1_g35bp")

[node name="Area2D" type="Area2D" parent="."]

[node name="doorArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_7ihvk")

[node name="closedDoorArea" type="CollisionShape2D" parent="Area2D"]
position = Vector2(228.5, 0)
shape = SubResource("RectangleShape2D_7ihvk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_ni8px")
animation = &"opening"
autoplay = "closed"

[node name="DoorCollision" type="CollisionShape2D" parent="."]
position = Vector2(116, 0)
shape = SubResource("RectangleShape2D_65nwm")
debug_color = Color(0.732599, 0.416999, 0.586664, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
